--- a/golf/20Stan_golf.ipynb
+++ b/golf/20Stan_golf.ipynb
@@ -20,6 +20,7 @@
    },
    "outputs": [],
    "source": [
+    "import cmdstanpy\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import beta\n",
